Revision history for IO-ReadHandle-Chain

1.2.0   2018-01-25
        - BREAKING CHANGE: no longer attempt to reset a source
          filehandle to its initial position when switching to the
          next source.
1.1.0   2017-12-21
        BUGFIX: 'read' beyond EOF now yields an empty buffer.

1.0.1   2017-12-18
        Declare that Perl v5.12 is needed.

1.0     2017-11-19
        First version.
