@@ -4,6 +4,9 @@ Revision history for IO-ReadHandle-Chain
         - BREAKING CHANGE: no longer attempt to reset a source
           filehandle to its initial position when switching to the
           next source.
+        - BUGFIX: 'read' at EOF now takes into account the specified
+          offset.
+
 1.1.0   2017-12-21
         BUGFIX: 'read' beyond EOF now yields an empty buffer.
 
